--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>com.batcheador</groupId>
     <artifactId>patrones-2020-2c-template</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
